# Potion

./: Buffering.py  Decoder.py  Inference.py  Potion.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: OnTaggedCommitPush.yml  onPullRequest.yml
python_potion/: __main__.py  buffering.py  client.py  common.py  converter.py  decode_benchmark.py  decoder.py  inference.py
tests/: gt_files.json  test_buffering.py  test_common.py  test_converter.py  test_decoder.py
